--- a/css/main.css
+++ b/css/main.css
@@ -6,4 +6,156 @@
 		-webkit-transform
 		-webkit-transform-style
 		-webkit-backface-visibility
+		
 */
+
+/* 	
+	#portfolio  	|   .container
+	.portfolio-item |	.card
+	.front 			| 	.front
+	.back 			|	.back 
+https://desandro.github.io/3dtransforms/docs/card-flip.html
+
+*/
+
+#portfolio{
+	width: 100%;
+	height: 200px;
+	position:relative;
+	perspective: 800px;
+}
+
+.portfolio-item {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transform-style: preserve-3d;
+  transition: transform 1s;
+}
+
+.portfolio-item div {
+  margin: 0;
+  display: block;
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  backface-visibility: hidden;
+}
+
+.portfolio-item .front {
+  background: red;
+}
+.portfolio-item .back {
+  background: blue;
+  transform: rotateY( 180deg );
+}
+
+.portfolio-item.flipped {
+  transform: rotateY( 180deg );
+}
+
+
+
+
+/* 	#portfolio  	|    
+	.portfolio-item |	.card  effect__EFFECT
+	.front 			|
+	.back 			|
+	 
+
+
+.portfolio-item {
+	position: relative;
+	float: left;
+	padding-bottom: 25%;
+	width: 45%;
+	text-align: center;
+}
+
+.front,
+.back {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.front,
+.back {
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -webkit-transition: -webkit-transform 0.3s;
+          transition: transform 0.3s;
+}
+
+.front {
+  background-color: #ff5078;
+}
+
+.back {
+  background-color: #1e1e1e;
+  -webkit-transform: rotateY(-180deg);
+          transform: rotateY(-180deg);
+}
+
+.portfolio-list:hover .front {
+  -webkit-transform: rotateY(-180deg);
+          transform: rotateY(-180deg);
+}
+
+.portfolio-list:hover .back {
+  -webkit-transform: rotateY(0);
+          transform: rotateY(0);
+}
+
+*/
+
+/*
+		https://davidwalsh.name/css-flip
+		https://codepen.io/darkwing/pen/bCali
+		
+#portfolio    | 		flip-container*/
+/*.portfolio-item  | 		  flipper*/
+/*.front 		|	 			front*/
+/*.back  		|		    	 back*/
+
+/* entire container, keeps perspective */
+/*#portfolio {*/
+/*	perspective: 1000;*/
+/*}*/
+
+	/* flip the pane when hovered */
+/*	#portfolio:hover .portfolio-item, #portfolio{*/
+/*		transform: rotateY(180deg);*/
+/*	}*/
+	
+/*#portfolio, .front, .back {*/
+/*	width:200px;*/
+/*	height:200px;*/
+/*}*/
+
+/*.portfolio-item {*/
+/*	transition: 0.6s;*/
+/*	transform-style: preserve-3d;*/
+/*	position: relative;*/
+/*}*/
+
+/* hide back of pane during swap */
+/*.front, .back {*/
+/*	backface-visibility: hidden;*/
+/*	position: absolute;*/
+/*	top: 0;*/
+/*	left: 0;*/
+/*}*/
+
+/* front pane, placed above back */
+/*.front {*/
+/*	z-index:2;*/
+/*	transform: rotateY(0deg);*/
+/*}*/
+
+/*back, initially hidden*/
+/*.back{*/
+/*	transform: rotateY(180deg);*/
+/*}*/
